Travis no longer supports FTP

--- a/assignment/climate.Rmd
+++ b/assignment/climate.Rmd
@@ -17,10 +17,15 @@ output: github_document
 library(tidyverse)
 ```
 
-```{r message=FALSE}
+```{r}
+if(!file.exists("co2_mm_mlo.txt"))
+  download.file("ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_mm_mlo.txt",
+                "co2_mm_mlo.txt")
+```
 
+```{r message=FALSE}
 co2 <- 
-readr::read_table("ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_mm_mlo.txt", 
+readr::read_table("co2_mm_mlo.txt", 
                   comment="#",
                   col_names = c("year", "month", "decimal_date", "average",
                                 "interpolated", "trend", "days"),
